<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary_dark"
            android:text="INPUT DATA SISWA"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelNPSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNPSN"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isiNPSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Masukkan NPSN"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNama"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isiNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Masukkan Nama"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelJK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelJK"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgJK"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioPria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pria"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioWanita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wanita"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/labelKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelKelas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pilihkelas"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/labelAgama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelAgama"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sAgama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pilihagama"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/labelTempLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelTemLahir"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isiTempatLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Masukkan Tempat Lahir"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelTemLahir"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isiTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="DD/MM/YYYY"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="tampil"
                android:text="SIMPAN"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hasil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>